--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ layout: default
 
 <div class="wrapper">
   <h1>404</h1>
-  <h2>page not found</h2>
+  <h2>seems like this page took a vacation, shall we find our way back?</h2>
 
   <p><a href="/">back to home</a></p>
 </div>
